Add multiple people at once
